# VRHI

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  README.md  README_zh-CN.md  RECOMMENDATIONS.md  TASK_SUMMARY.md
.github/workflows/: ci.yml
_codeql_build_dir/: compile_commands.json
cmake/: CompilerOptions.cmake  Dependencies.cmake  PlatformDetection.cmake  VRHIConfig.cmake.in
docs/: BACKEND_IMPLEMENTATION_GUIDE.md  CODING_STANDARDS.md  FEATURE_DETECTION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  KANBAN.md  NEXT_STEPS.md  README.md  RECOMMENDATIONS.md  ROADMAP_v1.0.md  TASK_SUMMARY.md  TOOLCHAIN.md
docs/api/: backends.md  commands.md  core.md  device.md  resources.md
docs/design/: architecture.md  backend_scoring.md  build_system.md  feature_detection.md  raii_principles.md  shader_system.md  window_system.md
docs/examples/: best_practices.md  cross_platform.md  logging_system.md  quick_start.md
docs/zh-CN/: CODING_STANDARDS.md  NEXT_STEPS.md  README.md  RECOMMENDATIONS.md  ROADMAP_v1.0.md  TASK_SUMMARY.md
docs/zh-CN/api/: backends.md  core.md  resources.md
docs/zh-CN/design/: architecture.md  backend_scoring.md  build_system.md  feature_detection.md  raii_principles.md  shader_system.md  window_system.md
docs/zh-CN/examples/: best_practices.md  cross_platform.md
examples/: CMakeLists.txt  README.md
examples/FeatureDetection/: CMakeLists.txt  README.md  main.cpp
examples/HelloTriangle/: CMakeLists.txt  main.cpp
examples/ShaderCompilation/: README.md  main.cpp
examples/TexturedCube/: CMakeLists.txt  README.md  main.cpp
include/VRHI/: Backend.hpp  BackendScoring.hpp  CommandBuffer.hpp  Logging.hpp  Pipeline.hpp  RenderPass.hpp  Resources.hpp  Shader.hpp  ShaderCompiler.hpp  Sync.hpp  VRHI.hpp  VRHIAll.hpp  Window.hpp
src/: CMakeLists.txt
src/Backends/OpenGL33/: GLExtensions.hpp  GLFormatUtils.cpp  GLFormatUtils.hpp  OpenGL33Backend.cpp  OpenGL33Backend.hpp  OpenGL33Buffer.cpp  OpenGL33Buffer.hpp  OpenGL33CommandBuffer.cpp  OpenGL33CommandBuffer.hpp  OpenGL33Device.cpp  OpenGL33Device.hpp  OpenGL33Framebuffer.cpp  OpenGL33Framebuffer.hpp  OpenGL33Pipeline.cpp  OpenGL33Pipeline.hpp  OpenGL33RenderPass.cpp  OpenGL33RenderPass.hpp  OpenGL33Sampler.cpp  OpenGL33Sampler.hpp  OpenGL33Shader.cpp  OpenGL33Shader.hpp  OpenGL33SwapChain.hpp  OpenGL33Sync.cpp  OpenGL33Sync.hpp  OpenGL33Texture.cpp  OpenGL33Texture.hpp  texture_format_helpers.txt
src/Backends/Vulkan/: VulkanBackend.cpp  VulkanBackend.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanSampler.cpp  VulkanSampler.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanSync.cpp  VulkanSync.hpp  VulkanTexture.cpp  VulkanTexture.hpp
src/Core/: Backend.cpp  BackendInit.cpp  BackendInit.hpp  BackendScoring.cpp  Device.cpp  DeviceImpl.cpp  DeviceImpl.hpp  Logging.cpp  MockBackend.cpp  MockBackend.hpp  NullBackend.cpp  NullBackend.hpp  NullDevice.cpp  NullDevice.hpp  NullResources.cpp  NullResources.hpp  ShaderCompiler.cpp  Version.cpp
src/WindowSystem/: WindowFactory.cpp
src/WindowSystem/GLFW/: GLFWWindow.cpp  GLFWWindow.hpp
tests/: CMakeLists.txt
tests/unit/: BackendInterfaceTests.cpp  BackendScoringTests.cpp  CoreAPITests.cpp  CoreTypesTests.cpp  FeatureDetectionTests.cpp  LoggingTests.cpp  MockBackend.hpp  ResourceManagementTests.cpp
